<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contactNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newContactName" />

    <EditText
        android:id="@+id/contactPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newContactNumber" />

    <EditText
        android:id="@+id/socialLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newSocialsLink" />

    <Button
        android:id="@+id/updateContactBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateBtn" />
</LinearLayout>