<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/textFieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newDateText" />

            <EditText
                android:id="@+id/newLocationTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newLocationText" />

            <EditText
                android:id="@+id/newCapacityTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newCapacityText" />

            <TextView
                android:id="@+id/enrolledParticipantsTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enrolledParticipantsText" />

            <ListView
                android:id="@+id/ParticipantListView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:text="@string/deleteBtn"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:text="@string/updateBtn" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>