<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spnEventTypes"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/newEventDateTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newDateText"
            android:inputType="text" />

        <EditText
            android:id="@+id/newEventLocationTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newLocationText" />

        <EditText
            android:id="@+id/newEventCapacityTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newCapacityText" />

        <Button
            android:id="@+id/addNewEventBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegisterAccount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>