<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="244dp" />

        <Spinner
            android:id="@+id/spnAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/accountTypes" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/newUserNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernameTextField"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <EditText
            android:id="@+id/newPasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordTextField"
            android:inputType="text"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/newClubNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/clubNameTextField"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button
            android:id="@+id/btnRegisterAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="OnRegisterAccountButton"
            android:text="@string/btnRegisterAccount" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>